# sphyre

./: docker-compose.yml
Fortro-Engine/: .dockerignore  .env  BASE_NETWORK.md  Cargo.toml  Dockerfile  README.md
Fortro-Engine/Smart Contract/: AccessControl.sol  ConsentRegistry.sol  CredentialRegistry.sol  DIDRegistry.sol  ISSIRegistry.sol  SSIRegistry.sol  SSIRegistryFactory.sol  SchemaRegistry.sol
Fortro-Engine/src/: blockchain.rs  config.rs  db.rs  error.rs  ipfs.rs  main.rs  models.rs
Fortro-Engine/src/api/: auth.rs  health.rs  issuer.rs  mod.rs  qr.rs  verifier.rs  wallet.rs
Fortro-Engine/src/services/: auth.rs  credential.rs  issuer.rs  mod.rs  presentation.rs  qr.rs  schema.rs  user.rs  verifier.rs  wallet.rs
Fortro-Engine/src/utils/: crypto.rs  did.rs  jwt.rs  mod.rs  qr.rs  zk_proofs.rs
sphyre-app/: Dockerfile  next.config.ts  package-lock.json  package.json  server.js
sphyre-app/src/lib/: consent.ts  credentials.ts  currentRequest.ts
sphyre-app/src/services/: api.ts
sphyre-issuers/: .dockerignore  Dockerfile  docker-setup.md  package.json
sphyre-issuers/src/services/: api.js
sphyre-verifier/: README.md  next.config.ts  package-lock.json  package.json
sphyre-verifier/public/: manifest.json  sw.js
sphyre-verifier/src/app/: globals.css  layout.tsx  page.tsx
sphyre-website/: Dockerfile  README.md  craco.config.js  package-lock.json  package.json
sphyre-website/public/: index.html
sphyre-website/src/: App.css  App.js  AppRouter.jsx  TestComponents.jsx  index.css  reactbits-patch.js
sphyre-website/src/pages/: AboutPage.jsx  ApplicationsPage.jsx  ContactPage.jsx  HomePage.jsx  (+1 more)
(+25 files in other folders)
