[package]
name = "fortro-engine"
version = "0.1.0"
edition = "2021"
description = "Backend for SSI Wallet with blockchain integration, consent management, and Dynamic Access Control"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web framework
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# SSI libraries
did-key = "0.2.1"

# MongoDB
mongodb = "3.0.0"
bson = "2.7.0"

# IPFS
ipfs-api-backend-hyper = "0.6.0"

# Ethereum L2 integration
ethers = { version = "2.0.8", features = ["legacy"] }
web3 = "0.19.0"
generic-array = "0.14.7"

# Zero-Knowledge Proofs
bulletproofs = "4.0.0"
curve25519-dalek-ng = "4.0.0"
merlin = "3.0.0"

# Utilities
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.49"
anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.28"
once_cell = "1.18.0"
rand = "0.8.5"
sha2 = "0.10.7"
hex = "0.4.3"
base64 = "0.21.4"
regex = "1.11.1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
bs58 = "0.5.0"
curve25519-dalek = "3.2.0"

# Post-Quantum Cryptography (PQC)
pqc_kyber = { version = "0.7.1", features = ["kyber768"] }
crystals-dilithium = "1.0.0"
